# compiladores

./: README.md  c0.cabal
1parte/trabalho/: c0.cabal
1parte/trabalho/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
1parte/trabalho/src/: Main.hs
1parte/trabalho/test/: test1.txt  test2.txt
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Inter.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.info  Parser.y
test/: intertext.txt  test1.txt  test2.txt  test3.txt  test4.txt
