
name:                C0
version:             0.1.0.0
synopsis:            C0
description:         C0 Compiler
author:              Miguel Ramos & Ricardo Ribeiro
maintainer:          up201705837@fc.up.pt & up201805242@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable C0
  main-is:             Main.hs
  other-modules:       Lexer, Parser, Inter
  build-tools:         alex, happy, Haskell2010
  build-depends:       base, array, mtl, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
